hphp/test/slow/unstable_features/fatal_if_feature_not_enabled.php.expectf
Fatal error: Cannot use unstable feature: `case_types` in %s on line 6
